Add some doc and avoid strict policy to apply on default policy

--- a/client-cache-control-bundle/src/main/resources/OSGI-INF/l10n/clientCache.properties
+++ b/client-cache-control-bundle/src/main/resources/OSGI-INF/l10n/clientCache.properties
@@ -1,5 +1,8 @@
-config.name = Client Cache Templates Configuration
 config.description = Configuration of the client cache templates
+mode.name = Allow Cache Control Header overrides
+mode.description = Allow the Cache-Control header value to be overridden by other component in the request/response processing chain
+mode.strict.label = Strict
+mode.overrides.label = Allow Overrides
 ttl.intermediates.name = Intermediates Cache Duration
 ttl.intermediates.description = Duration while an intermediate can keep content in cache without revalidation (in seconds)
 ttl.immutable.name = Immutable Cache Duration
