feat: add a medium ttl for some content

--- a/client-cache-control-bundle/src/main/resources/OSGI-INF/l10n/clientCache.properties
+++ b/client-cache-control-bundle/src/main/resources/OSGI-INF/l10n/clientCache.properties
@@ -3,15 +3,19 @@ mode.name = Allow Cache Control Header overrides
 mode.description = Allow the Cache-Control header value to be overridden by other component in the request/response processing chain
 mode.strict.label = Strict
 mode.overrides.label = Allow Overrides
-ttl.intermediates.name = Intermediates Cache Duration
-ttl.intermediates.description = Duration while an intermediate can keep content in cache without revalidation (in seconds)
+ttl.short.name = Intermediate Cache Duration (short)
+ttl.short.description = Duration while an intermediate can keep content in cache without revalidation (in seconds)
+ttl.medium.name = Intermediate Cache Duration (medium)
+ttl.medium.description = Duration while an intermediate can keep content in cache without revalidation (in seconds)
 ttl.immutable.name = Immutable Cache Duration
 ttl.immutable.description = Duration while content is considered immutable in all caches (in seconds)
-cacheHeaderTemplate.private.name = Private Cache Header Template (DO NOT EDIT WITHOUT KNOWING THE IMPLICATIONS)
-cacheHeaderTemplate.private.description = Cache header template for private resource (client cache with revalidation and no intermediates cache)
-cacheHeaderTemplate.custom.name = Customized Cache Header Template (DO NOT EDIT WITHOUT KNOWING THE IMPLICATIONS)
-cacheHeaderTemplate.custom.description = Cache header template for rendered resource with specific content cache properties (client cache with revalidation and intermediates cache duration reflecting internal jahia cache expiration)
-cacheHeaderTemplate.public.name = Public Cache Header Template (DO NOT EDIT WITHOUT KNOWING THE IMPLICATIONS)
-cacheHeaderTemplate.public.description = Cache header template for public dynamic resource like pages or files (client cache with systematic revalidation and intermediates cache with intermediates ttl value)
-cacheHeaderTemplate.immutable.name = Immutable Cache Header Template (DO NOT EDIT WITHOUT KNOWING THE IMPLICATIONS)
-cacheHeaderTemplate.immutable.description = Cache header template for immutable resources that never changes (client and intermediates caching with immutable ttl value, no revalidation needed)
+cacheHeaderTemplate.private.name = Private Cache Header Template
+cacheHeaderTemplate.private.description = (DO NOT EDIT WITHOUT KNOWING THE IMPLICATIONS) Cache header template for private resource (client cache with revalidation and no intermediates cache)
+cacheHeaderTemplate.custom.name = Customized Cache Header Template
+cacheHeaderTemplate.custom.description = (DO NOT EDIT WITHOUT KNOWING THE IMPLICATIONS) Cache header template for rendered resource only with specific content cache properties (client cache with revalidation and intermediates cache duration reflecting internal jahia cache expiration)
+cacheHeaderTemplate.public.name = Public Short Duration Cache Header Template
+cacheHeaderTemplate.public.description = (DO NOT EDIT WITHOUT KNOWING THE IMPLICATIONS) Cache header template for public dynamic resource like pages or files (client cache with systematic revalidation and intermediates cache with short ttl value)
+cacheHeaderTemplate.public.medium.name = Public Medium Duration Cache Header Template
+cacheHeaderTemplate.public.medium.description = (DO NOT EDIT WITHOUT KNOWING THE IMPLICATIONS) Cache header template similar to public but with a longer cache duration (client cache with systematic revalidation and intermediates cache with medium ttl value)
+cacheHeaderTemplate.immutable.name = Immutable Cache Header Template
+cacheHeaderTemplate.immutable.description = (DO NOT EDIT WITHOUT KNOWING THE IMPLICATIONS) Cache header template for immutable resources that never changes (client and intermediates caching with immutable ttl value, no revalidation needed)
